--- a/biografia.html
+++ b/biografia.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title> site Anna Bella </title>
+    <title> Biografia </title>
 
     <link rel="stylesheet" href="estilo.css">
 </head>
@@ -21,12 +21,12 @@
         </div>
 
         <div id="conteudo">
-            <h1>Sobre Anna Bella </h1>
+            <h1>Biografia </h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate magna id est ullamcorper viverra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut suscipit auctor tristique. Aenean sagittis, nisi consectetur aliquam consequat, purus dolor hendrerit tortor, a mollis nunc libero at turpis. Pellentesque a nibh eget velit egestas finibus. Integer nisi enim, ullamcorper a nibh sed, feugiat bibendum ligula. Curabitur egestas odio odio, sit amet imperdiet sem tincidunt quis. Pellentesque erat ante, pulvinar eu consectetur quis, lobortis id ipsum. Quisque cursus ligula sit amet turpis vehicula, non sollicitudin lacus sodales.  
 
             </p>
-            <img src="imagens/foto2.png" alt="">
+           
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate magna id est ullamcorper viverra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut suscipit auctor tristique. Aenean sagittis, nisi consectetur aliquam consequat, purus dolor hendrerit tortor, a mollis nunc libero at turpis. Pellentesque a nibh eget velit egestas finibus. Integer nisi enim, ullamcorper a nibh sed, feugiat bibendum ligula. Curabitur egestas odio odio, sit amet imperdiet sem tincidunt quis. Pellentesque erat ante, pulvinar eu consectetur quis, lobortis id ipsum. Quisque cursus ligula sit amet turpis vehicula, non sollicitudin lacus sodales.  
                 
