--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div id="principal" >
          <img src="imagens/capa.png" alt="">
 
-        <div id="menu">
+        <div id="menu"> <!-- as imagens são de banco de imagnes gratuitos-->
             <a href="index.html">HOME</a> |
             <a href="biografia.html">BIOGRAFIA</a> |
             <a href="contato.html">CONTATO</a> |
             <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITARIAS</a> 
         </div>
 
-        <div id="conteudo">
+        <div id="conteudo"> <!-- usei um site de gerar textos aleatrios, ficou tudo na mesma linha na linha de codigo, mas como nn era um texto de verdade ignorei   -->
             <h1>Sobre Anna Bella </h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate magna id est ullamcorper viverra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut suscipit auctor tristique. Aenean sagittis, nisi consectetur aliquam consequat, purus dolor hendrerit tortor, a mollis nunc libero at turpis. Pellentesque a nibh eget velit egestas finibus. Integer nisi enim, ullamcorper a nibh sed, feugiat bibendum ligula. Curabitur egestas odio odio, sit amet imperdiet sem tincidunt quis. Pellentesque erat ante, pulvinar eu consectetur quis, lobortis id ipsum. Quisque cursus ligula sit amet turpis vehicula, non sollicitudin lacus sodales.  
